--- a/src/client/src/scss/AllRecipes.scss
+++ b/src/client/src/scss/AllRecipes.scss
@@ -4,6 +4,7 @@
   justify-content: space-around;
   button{
     padding: 5px 15px;
+    background: #fff;
     &:hover{
       cursor: pointer;
       cursor: pointer;
