--- a/src/client/src/styles/assets/partials/vars.scss
+++ b/src/client/src/styles/assets/partials/vars.scss
@@ -14,10 +14,10 @@ $phoneWidth              : 480px;
 $smPhoneWidth            : 320px;
 
 // Main color
-$default-color           : #ffffff;
-$primary-color           : #444ce0;
-$success-color           : #26de81;
-$danger-color            : #fc5c65;
+$main-color              : #45D6D6;
+$light-green             : #C6FFDD;
+$light-yellow            : #FBD786;
+$light-red               : #f7797d;
 $warning-color           : #fed330;
 $light-color             : #999999;
 $purple-color            : #8854d0;
