--- a/src/client/src/scss/AllRecipes.scss
+++ b/src/client/src/scss/AllRecipes.scss
@@ -39,6 +39,7 @@
   display: flex;
   flex-direction: column;
   &:hover {
+    cursor: pointer;
     -webkit-box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.75);
