--- a/src/client/src/scss/Recommended.scss
+++ b/src/client/src/scss/Recommended.scss
@@ -1,4 +1,5 @@
 .slider__item {
+  height: 400px;
   position: relative;
   transition: all 0.3s;
   img{
@@ -6,6 +7,7 @@
     filter: saturate(130%);
   }
   div{
+    height: 500px;
     background: #000;
     opacity: 0.7;
     position: absolute;
