--- a/src/client/src/styles/assets/main.scss
+++ b/src/client/src/styles/assets/main.scss
@@ -8,7 +8,7 @@ html {
 	color: $mainFontColor;
   height: 100%;
   button{
-    background: #fff;
+    background: $light-green
   }
   @media screen and (max-width: $desktopWidth) {
 		font-size: 16px;
@@ -30,7 +30,7 @@ body {
   font-weight: $mainFontWeight;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #C0C4CC;
+  background: $light-yellow
 }
 
 *, *:before, *:after { box-sizing: border-box; }
