--- a/src/client/src/scss/RecipeCard.scss
+++ b/src/client/src/scss/RecipeCard.scss
@@ -71,3 +71,14 @@
 
   }
 }
+
+.home__btn{
+  position: absolute !important;
+  top: 15px;
+  right: 3%;
+  svg{
+    font-size: 30px;
+    color: $light-red !important;
+  }
+
+}
