--- a/src/client/src/scss/Header.scss
+++ b/src/client/src/scss/Header.scss
@@ -4,7 +4,6 @@
         justify-content: space-between;
         align-items: center;
         li {
-
             height: 100%;
             display: block;
             text-align: center;
@@ -22,4 +21,50 @@
             height: 100px;
         }
     }
+}
+button{
+    &:hover{
+        cursor: pointer;
+    }
+}
+.closeAuth{
+    position: absolute;
+    right: 10px;
+    top: 5px;
+}
+.Overlay{
+    background-color: red;
+}
+.authForm{
+    display: flex;
+    flex-direction: column;
+    input{
+        line-height: 26px;
+        font-size: 16px;
+        border: 1px solid #e6e6e6;
+        margin-top: 26px;
+    }
+    img{
+        height: 60px;
+        width: 60px;
+        border-radius: 50%;
+    }
+    ul{
+        margin-top: 30px;
+        display: flex;
+        justify-content: space-between;
+        button{
+            border-radius: 50%;
+            background: transparent;
+        }
+    }
+    .signInBtn{
+        width: 40%;
+        display: block;
+        margin: 40px auto 0 ;
+        border: 1px solid #e6e6e6;
+    }
+}
+.authTitle {
+    text-align: center;
 }
