working login/out, search by ingredints

--- a/src/client/src/scss/Header.scss
+++ b/src/client/src/scss/Header.scss
@@ -15,6 +15,17 @@
             button{
                 width: 100px;
             }
+            &.logName > button:nth-child(2){
+                display: none;
+            }
+            &.logName:hover > button:nth-child(1){
+                display: none;
+            }
+            &.logName:hover > button:nth-child(2){
+                cursor: pointer;
+                display: block;
+            }
+
         }
         img{
             width: 100px;
