--- a/src/client/src/scss/CategoriesSlider.scss
+++ b/src/client/src/scss/CategoriesSlider.scss
@@ -1,6 +1,15 @@
 .categories__slider{
+  margin-top: 15px;
   font-size: 16px;
   text-align: center;
+  & .category_btn{
+    width: 120px;
+    background: red;
+    height: 120px;
+    border-radius: 50px;
+    margin: 0 auto 10px;
+    padding: 0;
+  }
   img{
     margin: 0 auto 10px;
     width: 120px;
