--- a/src/client/src/scss/AllRecipes.scss
+++ b/src/client/src/scss/AllRecipes.scss
@@ -5,9 +5,8 @@
   button{
     padding: 5px 15px;
     background: #fff;
+    cursor: pointer;
     &:hover{
-      cursor: pointer;
-      cursor: pointer;
       webkit-box-shadow: 0px 0px 25px -1px rgba(0,0,0,0.75);
       -moz-box-shadow: 0px 0px 25px -1px rgba(0,0,0,0.75);
       box-shadow: 0px 0px 25px -1px rgba(0,0,0,0.75);
@@ -43,8 +42,8 @@
   box-shadow: 0 20px 40px -14px rgba(0,0,0,0.25);
   display: flex;
   flex-direction: column;
+  cursor: pointer;
   &:hover {
-    cursor: pointer;
     -webkit-box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.75);
@@ -122,9 +121,7 @@
   font-size: 0.8rem;
   font-weight: 300;
   letter-spacing: 2px;
-  &:hover{
-    cursor: pointer;
-  }
+  cursor: pointer;
 }
 .loadMore {
   margin: 20px auto 40px;
@@ -135,8 +132,8 @@
   color: rgb(0,0,238);
   border: 1px solid #000;
   transition: all 0.1s ease-in-out;
+  cursor: pointer;
   &:hover{
-    cursor: pointer;
     -webkit-box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.75);
@@ -159,3 +156,4 @@
     color: black !important;
   }
 }
+.globalCursor * { cursor: wait !important }
